--- a/docker-compose.external.yml
+++ b/docker-compose.external.yml
@@ -22,7 +22,7 @@ services:
     restart: unless-stopped
     network_mode: bridge
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/', (res) => { const ok = res.statusCode >= 200 && res.statusCode < 400; process.exit(ok ? 0 : 1); }).on('error', () => process.exit(1));"]
       interval: 30s
       timeout: 10s
       retries: 3
